--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -115,8 +115,6 @@
   color: $yellow-color;
   font-family: $bree-font;
   text-transform: uppercase;
-  width: 140px;
-  line-height: 0.7;
 }
 
 .site-description {
@@ -125,6 +123,12 @@
   font-family: $inconsolata-font;
   font-style: normal;
   text-transform: uppercase;
+}
+
+/* MOBILE MENU */
+.mobile-menu-check,
+.show-mobile-menu {
+  display: none;
 }
 
 /* FOOTER STYLES */
@@ -154,8 +158,87 @@
   }
 }
 
-@media (max-width: 800px) {
+@media (max-width: 1200px) {
 
   /* HEADER STYLES */
-  
+  .header {
+    width: 100%;
+    padding: 0 5vw;
+  }
+  .header-logo {
+    display: flex;
+    flex-direction:row;
+    justify-content: flex-start;
+    align-items: center;
+    width: 66%;
+    &>h1 {
+      position:absolute;
+      float: left;
+      left: 50%;
+      transform: translate(-50%, 0%);
+    }
+    &>h2 {
+      display:none;
+    }
+    &>a {
+      width: 33vw;
+    }
+  }
+  .social-nav-block {
+    width: 34%;
+  }
+
+  /* MOBILE MENU */
+  .fa-bars {
+    color: $yellow-color;
+  }
+  .show-mobile-menu {
+    display: block;
+  }
+  .header-social {
+    display: none;
+  }
+  .header-admin {
+    display:none;
+  }
+  .header-nav {
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+  }
+  .header-list {
+    max-height: 0;
+    overflow: hidden;
+    padding: 0;
+    transition: all 0.5s ease-in-out;
+    background-color: $purple-color;
+    box-sizing: border-box;
+    position: absolute;
+    text-align: center;
+    top: 10vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    &>li {
+    }
+    &>li~li {
+      padding: 0.5% 0 0;
+    }
+  }
+  .mobile-menu-check:checked ~ .header-list {
+    max-height: 1000px;
+    height: 40vh;
+    overflow: scroll;
+  }
+
+  /* CONTENT STYLES */
+  #static_pages {
+    background-image: none;
+  }
 }
