basic mq for index page header and footer

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -40,7 +40,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 @media (max-width: 1200px) {
-  .global-header {
+  .global-header, .global-footer {
     height: 10vh;
+    min-height: 50px;
+  }
+  .body-index-container {
+    width: 100vw;
+    min-height: 80vh;
   }
 }
