--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,12 +4,12 @@
   </div>
   <div class="social-list">
     <ul class="footer-list social-list">
-      <li><a href="#">Suivez-nous!</a></li>
-      <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-      <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-      <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-      <li><a href="#"><i class="fab fa-tumblr"></i></a></li>
-      <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+      <li class="suivez-nous"><a>Suivez-nous!</a></li>
+      <li><a href="https://www.facebook.com/thebergerie.net"><i class="fab fa-facebook-f"></i></a></li>
+      <li><a href="https://twitter.com/thebergerie"><i class="fab fa-twitter"></i></a></li>
+      <li><a href="https://instagram.com/thebergerie"><i class="fab fa-instagram"></i></a></li>
+      <li><a href="http://thebergerie.tumblr.com"><i class="fab fa-tumblr"></i></a></li>
+      <li><a href="https://www.youtube.com/channel/UCz00sjGIwWCRbsVdf5Lcrtg"><i class="fab fa-youtube"></i></a></li>
   </ul>
   </div>
 </footer>
