--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,7 +11,7 @@
         <li><a href="https://www.facebook.com/thebergerie.net"><i class="fab fa-facebook-f"></i></a></li>
         <li><a href="https://twitter.com/thebergerie"><i class="fab fa-twitter"></i></a></li>
         <li><a href="https://instagram.com/thebergerie"><i class="fab fa-instagram"></i></a></li>
-        <li><a href="http://thebergerie.tumblr.com/"><i class="fab fa-tumblr"></i></a></li>
+        <li><a href="http://thebergerie.tumblr.com"><i class="fab fa-tumblr"></i></a></li>
         <li><a href="https://www.youtube.com/channel/UCz00sjGIwWCRbsVdf5Lcrtg"><i class="fab fa-youtube"></i></a></li>
       </ul>
     </div>
