media queries posts + corrections index

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -48,4 +48,8 @@ h1, h2, h3, h4, h5, h6 {
     width: 100vw;
     min-height: 80vh;
   }
+  .body-show-container {
+    min-width: 0;
+    width: 100%;
+  }
 }
