--- a/app/views/static_pages/show.html.erb
+++ b/app/views/static_pages/show.html.erb
@@ -3,7 +3,7 @@
   <div class="posts-show-wrapper">
     <span class="post-category-posts"> <%= @post.category.name.capitalize %> </span>
     <h1> <%= @post.title %> </h1>
-    <div class="post-date-user-posts">
+    <div class="post-date-user-posts-show">
       <span class="post-date-posts"> <%= @post.created_at.to_date.strftime("%d-%m-%Y") %> </span>
       <span class="post-user-posts"> <%= @post.user.username.capitalize%> </span>
     </div>
