--- a/app/views/layouts/_category.html.erb
+++ b/app/views/layouts/_category.html.erb
@@ -18,7 +18,7 @@
               <%= raw post.preview %>
             </div>
             <div class="post-show-button">
-              <%= link_to "Lire la suite", post_path(post)%>
+              <%= link_to "Lire la suite", article_path(post)%>
             </div>
           </div>
         </div>
