--- a/app/views/layouts/_category.html.erb
+++ b/app/views/layouts/_category.html.erb
@@ -5,7 +5,7 @@
         <% if post.category.name == yield(:title) %>
         <div class="index-posts">
           <div class="thumbnails-posts">
-            <%= image_tag("noxo.png", alt: "Noxorae") %>
+            <%= image_tag post.thumbnail.url, alt: "thumbnail" if post.thumbnail? %>
           </div>
           <div class="info-posts">
             <span class="post-category-posts"> <%= post.category.name.capitalize%> </span>
