--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -3,22 +3,7 @@
 <%= @post.category.name %>
 
 <div class="posts-new-wrapper">
-  <%= form_for(@post, html: {class: "post-form"}) do |f| %>
-    <%= render 'layouts/error_messages' %>
-
-    <%= f.label :catégorie %>
-    <%= f.select(:category_id, @category_options) %>
-      
-    <%= f.label :titre %>
-    <%= f.text_field :title %>
-
-    <%= f.label :preview %>
-    <%= f.text_field :preview %>
-
-    <%= f.label :contenu %>
-    <%= f.text_field :content %>
-    <%= f.submit "Editer mon article", class: "btn btn-primary" %>
-  <% end %>
+  <%= render 'layouts/form' %>
   <%= render 'layouts/text_editor' %>
 </div>
 
