--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,7 +11,7 @@
       <% @posts.each do |post|%>
       <div class="index-posts">
         <div class="thumbnails-posts">
-          <%= image_tag post.thumbnail.url, alt: "thumbnail" if post.thumbnail? %>
+          <%= cl_image_tag post.thumbnail.url, alt: "thumbnail" if post.thumbnail? %>
         </div>
         <div class="info-posts">
           <span class="post-category-posts"> <%= post.category.name.capitalize%> </span>
